# Real-Estate-Advisor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: README.md  __init__.py  flow_manager.py  main.py  settings.py
src/crews/: README.md  __init__.py  crew.py
src/crews/config/: README.md  agents.yaml  tasks.yaml
src/crews/guardrails/: README.md  __init__.py  safety_guardrails.py
src/real_estate_advisor/: crew.py  main.py
src/tests/: README.md  __init__.py  test_crew.py  test_financial_calculator.py  test_guardrails.py
src/tools/: README.md  __init__.py  custom_tools.py  financial_calculator.py
src/ui/: README.md  __init__.py  orchestrator.py  streamlit.py
