[project]
name = "real_estate_advisor"
version = "0.1.0"
description = "REAL-ESTATE-ADVISOR using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
real_estate_advisor = "real_estate_advisor.main:run"
run_crew = "real_estate_advisor.main:run"
train = "real_estate_advisor.main:train"
replay = "real_estate_advisor.main:replay"
test = "real_estate_advisor.main:test"
run_with_trigger = "real_estate_advisor.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
pythonpath = "."